syntax = "proto3";

option csharp_namespace = "Demo.gRPC.FileTransport";

package FileTransport;


service FileTransportService{
  rpc FileDownload (FileInfo) returns (stream BytesContentDownload);
  rpc FileUpload (stream BytesContentUpload) returns(UploadResult);
}

message FileInfo{
  int64 fileId = 1;
  ImageType Type = 2;
}

enum ImageType{
  Original = 0;
  Preview = 1;
}

message BytesContentUpload{
  string fileName = 1;
  int64 databaseId = 2;
  bytes content = 3;
}

message BytesContentDownload{
  bytes content = 3;
}

message UploadResult{
  bool UploadCompletedSuccessfully = 1;
}
