syntax = "proto3";

option csharp_namespace = "Demo.gRPC.SPA.FileTransport";

package imageTransport;

// Транспорт изображений от клиента до сервера
service ImageTransportService{
  rpc FileDownload (UserInfo) returns (stream BytesContentDownload);
  rpc FileUpload (stream BytesContentUpload) returns(UploadResult);
}

message UserInfo{
  bool isPreview = 1;
}

message BytesContentUpload{
  string fileName = 1;
  int64 databaseId = 2;
  bytes content = 3;
}

message BytesContentDownload{
  int64 fileId = 1;
  string fileName = 2;
  bytes content = 3;
  bool isPreview = 4;
}

message UploadResult{
  bool UploadCompletedSuccessfully = 1;
}